[gd_scene load_steps=46 format=3 uid="uid://bgjok2jf65yne"]

[ext_resource type="Script" path="res://Entities/Player/Scripts/player.gd" id="1_rqppq"]
[ext_resource type="Texture2D" uid="uid://cp6m03hkeksr4" path="res://Entities/Player/Assets/skelly_sprites.aseprite" id="2_pmmbf"]
[ext_resource type="Script" path="res://Common/Components/Cameras/FollowCamera.gd" id="3_7gq3q"]
[ext_resource type="Script" path="res://Common/Components/Cameras/TransitionCamera.gd" id="4_rgvow"]
[ext_resource type="Script" path="res://Common/FiniteStateMachine/Finite_State_machine.gd" id="5_pq454"]
[ext_resource type="Script" path="res://Entities/Player/States/Idle.gd" id="6_5rrt8"]
[ext_resource type="Script" path="res://Entities/Player/States/Fall.gd" id="7_etom1"]
[ext_resource type="Script" path="res://Entities/Player/States/Jump.gd" id="8_ssifo"]
[ext_resource type="Script" path="res://Entities/Player/States/Walk.gd" id="9_yn2dp"]
[ext_resource type="Script" path="res://Entities/Player/Boost.gd" id="10_k0tat"]
[ext_resource type="Script" path="res://Entities/Player/States/Hover.gd" id="11_rj1gi"]
[ext_resource type="Script" path="res://Entities/Player/States/WallJump.gd" id="12_iguxa"]
[ext_resource type="Script" path="res://Entities/Player/Dying.gd" id="13_kbokf"]
[ext_resource type="Script" path="res://Entities/Player/States/Shoot.gd" id="14_eja27"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f1nm4"]
size = Vector2(10, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nwly3"]
size = Vector2(7, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2awl"]
atlas = ExtResource("2_pmmbf")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mvng"]
atlas = ExtResource("2_pmmbf")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nehyo"]
atlas = ExtResource("2_pmmbf")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m448"]
atlas = ExtResource("2_pmmbf")
region = Rect2(208, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqrso"]
atlas = ExtResource("2_pmmbf")
region = Rect2(144, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2q3x4"]
atlas = ExtResource("2_pmmbf")
region = Rect2(160, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hch5s"]
atlas = ExtResource("2_pmmbf")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrmtq"]
atlas = ExtResource("2_pmmbf")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvvvm"]
atlas = ExtResource("2_pmmbf")
region = Rect2(144, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5yt8"]
atlas = ExtResource("2_pmmbf")
region = Rect2(160, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3e33"]
atlas = ExtResource("2_pmmbf")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_63v4b"]
atlas = ExtResource("2_pmmbf")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eyim"]
atlas = ExtResource("2_pmmbf")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eoqow"]
atlas = ExtResource("2_pmmbf")
region = Rect2(48, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_exw8h"]
atlas = ExtResource("2_pmmbf")
region = Rect2(64, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlll5"]
atlas = ExtResource("2_pmmbf")
region = Rect2(80, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd7ya"]
atlas = ExtResource("2_pmmbf")
region = Rect2(96, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qask6"]
atlas = ExtResource("2_pmmbf")
region = Rect2(112, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k60ai"]
atlas = ExtResource("2_pmmbf")
region = Rect2(128, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tl17"]
atlas = ExtResource("2_pmmbf")
region = Rect2(144, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_05n6e"]
atlas = ExtResource("2_pmmbf")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpdtg"]
atlas = ExtResource("2_pmmbf")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2r05"]
atlas = ExtResource("2_pmmbf")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v6cx"]
atlas = ExtResource("2_pmmbf")
region = Rect2(48, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rtn6"]
atlas = ExtResource("2_pmmbf")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7d5r"]
atlas = ExtResource("2_pmmbf")
region = Rect2(96, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_maxwu"]
atlas = ExtResource("2_pmmbf")
region = Rect2(112, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfwcr"]
atlas = ExtResource("2_pmmbf")
region = Rect2(128, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wfwjy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2awl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mvng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nehyo")
}],
"loop": true,
"name": &"charge",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m448")
}],
"loop": false,
"name": &"cling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqrso")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2q3x4")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"hover",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hch5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrmtq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvvvm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5yt8")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3e33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63v4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eyim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eoqow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exw8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlll5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd7ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qask6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k60ai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tl17")
}],
"loop": false,
"name": &"lava_death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_05n6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpdtg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2r05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v6cx")
}],
"loop": false,
"name": &"spike_death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rtn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7d5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_maxwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfwcr")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_rqppq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 7)
shape = SubResource("RectangleShape2D_f1nm4")

[node name="HitBox" type="Area2D" parent="." groups=["Player"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-1.5, 7.5)
shape = SubResource("RectangleShape2D_nwly3")
debug_color = Color(0.886789, 0.266542, 0.502231, 0.42)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wfwjy")
animation = &"charge"
autoplay = "idle"

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 10)
rotation = -1.5708
target_position = Vector2(0, 13)
collide_with_areas = true

[node name="FollowCamera" type="Camera2D" parent="."]
script = ExtResource("3_7gq3q")

[node name="TransitionCamera" type="Camera2D" parent="."]
script = ExtResource("4_rgvow")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_pq454")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "animated_sprite")]
script = ExtResource("6_5rrt8")
character_body = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="Fall" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "animated_sprite")]
script = ExtResource("7_etom1")
character_body = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "animated_sprite")]
script = ExtResource("8_ssifo")
character_body = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")
JUMP_HORIZONTAL_SPEED = 20.0
MAX_HORIZONTAL_JUMP_SPEED = 80.0

[node name="Walk" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "animated_sprite")]
script = ExtResource("9_yn2dp")
character_body = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="Boost" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "animated_sprite")]
script = ExtResource("10_k0tat")
character_body = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="Hover" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "animated_sprite")]
script = ExtResource("11_rj1gi")
character_body = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="WallJump" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "animated_sprite")]
script = ExtResource("12_iguxa")
character_body = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="Dying" type="Node" parent="StateMachine" node_paths=PackedStringArray("character_body", "animated_sprite")]
script = ExtResource("13_kbokf")
character_body = NodePath("../..")
animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="Shoot" type="Node" parent="StateMachine"]
script = ExtResource("14_eja27")

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
